cmake_minimum_required(VERSION 3.10)
project("JetBox Test")

add_executable(i2c_verify_test i2c_verify_test.cpp)
target_link_libraries(i2c_verify_test jetbox_i2c jetbox_include)

add_executable(pca9685_test pca9685_test.cpp)
target_link_libraries(pca9685_test jetbox_pca9685)

add_executable(rc_car_test rc_car_test.cpp)
target_link_libraries(rc_car_test jetbox_rc_car)

add_executable(user_input_device_test user_input_device_test.cpp)
target_link_libraries(user_input_device_test jetbox_user_input_device)

add_executable(rc_car_controller_test rc_car_controller_test.cpp)
target_link_libraries(rc_car_controller_test jetbox_rc_car_controller)
